# CHC-Index

./: .gitignore  README.md
SourceCode/: CMakeLists.txt
SourceCode/3rdPartyLib/snap/glib-core/: bd.h
SourceCode/3rdPartyLib/snap/snap-core/: gbase.cpp  gbase.h  graph.h  subgraph.cpp  subgraph.h
SourceCode/include/: basic_data.h  basic_define.h  chci.h  decomposition.h  load_dataset_topology.h  metric_space.h  read_adj.h  utils.h
SourceCode/include/111/: chci_bak.h
SourceCode/integrate/: ATC.h  VAC.h
SourceCode/integrate/rKACS/: CMakeLists.txt  README.md
SourceCode/integrate/rKACS/src/: Common.cpp  Common.h  Def.cpp  Def.h  DynamicClique.cpp  DynamicClique.h  DynamicTCTruss.cpp  DynamicTCTruss.h  KRCore.cpp  KRCore.h  MaxMinWeightTruss.cpp  MaxMinWeightTruss.h  MaxMinWeightTruss_bak.h  SFormat.h  TrussComputation.cpp  TrussComputation.h  main.cpp
SourceCode/scripts/: algo_args.sh  build.sh  config_dataset.sh  dataset_args.sh  exp5_2.sh  exp5_3.sh  exp5_4.sh  exp5_5.sh  exp_args.sh  gen_gt_add.sh  multi_build.sh  multi_build_IndexCSAG_gt.sh  multi_build_rebuild.sh  run_algo.sh  scalability.sh
SourceCode/tests/: ATC-Test.cpp  CHCI-Build.cpp  CHCI-Del-Retrieve-Multi.cpp  CHCI-Part_Add.cpp  CHCI-Part_Build.cpp  CHCI-Retrieve-L.cpp  CHCI-Retrieve-Multi.cpp  VAC-Test.cpp
